--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "chart.js": "^4.5.1",
         "ionicons": "^8.0.13",
         "jquery": "^3.7.1",
+        "laravel-echo": "^2.2.6",
+        "pusher-js": "^8.4.0",
         "sweetalert2": "^11.26.4",
         "vue": "^3.5.25",
         "vue-toastification": "^2.0.0-rc.5"
