--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^1.1",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.23",
         "tightenco/ziggy": "^2.6"
     },
