--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.1.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.2.19",
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^6.0.2",
